changed logger name

--- a/deployment-files/awsprops-stage.properties
+++ b/deployment-files/awsprops-stage.properties
@@ -3,7 +3,7 @@ iot.secretKeyId=
 region=
 iot.endpoint=
 logs.bucket=facilio-logs
-s3.bucket.name=facilio-stage1-data
+s3.bucket.name=facilio-stage-data
 static.bucket=facilio-client-build
 key.pair.id=APKAJUH5UCWNSYC4DOSQ
 user.id=668907905219
