removed jmx property and commented debug log and added property for syslog

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -20,6 +20,7 @@ rebrand.copyright.year=2018
 ## environment of this server [development/stage/production]
 environment=development
 
+syslog.enabled=true
 ## should this server run schedule jobs
 schedulerServer=false
 ## should this server run instant jobs
