--- a/deployment-files/awsprops-user.properties
+++ b/deployment-files/awsprops-user.properties
@@ -32,7 +32,8 @@ files.url=files.facilio.com
 files.store.type=aws_filestore
 
 redis.enabled=true
-redis.host=app-cache.jihtbf.0001.usw2.cache.amazonaws.com
+#redis.host=app-cache.jihtbf.0001.usw2.cache.amazonaws.com
+redis.host=app-cache-1.jihtbf.0001.usw2.cache.amazonaws.com
 redis.port=6379
 redis.db=2
 
