added script to restart serrver on oom and take heap dump. avoided unnecessary JSONParser object creation. Fixed notification issue

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,6 +14,7 @@ artifacts:
     - scripts/move_logs.sh
     - scripts/start_xvfb.sh
     - scripts/setenv.sh
+    - scripts/oom.sh
     - deployment-files/*
   discard-paths: yes
 
