--- a/appspec.yml
+++ b/appspec.yml
@@ -15,6 +15,8 @@ files:
     destination: /home/ubuntu
   - source: /setenv.sh
     destination: /home/ubuntu
+  - source: /oom.sh
+    destination: /home/ubuntu
   - source: /awsprops-scheduler.properties
     destination: /home/ubuntu/deployment-files/
   - source: /awsprops-kinesis.properties
