--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -22,7 +22,7 @@ environment=development
 
 syslog.enabled=true
 ## should this server run schedule jobs
-schedulerServer=false
+schedulerServer=true
 ## should this server run instant jobs
 instantJobServer=true
 ## should this server process iot messages
