Changes to client error logs

--- a/src/main/webapp/WEB-INF/classes/log4j.properties
+++ b/src/main/webapp/WEB-INF/classes/log4j.properties
@@ -13,7 +13,7 @@ log4j.appender.clientAppender=com.facilio.logging.FacilioLogAppender
 log4j.appender.clientAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.clientAppender.File=${catalina.base}/logs/clientlog
 log4j.appender.clientAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.clientAppender.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{ceType} %X{route} %X{ceApi} %X{statusCode} %X{stacktrace} %X{ceInfo} %X{ceUa} %X{browser} %X{os} %X{orgId} %X{userId} %m%n
+log4j.appender.clientAppender.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{route} %X{stacktrace} %X{ceType} %X{ceInfo} %X{ceUa} %X{browser} %X{os} %X{orgId} %X{userId} %m%n
 
 
 log4j.logger.com.mysql.jdbc.ResultSetImpl=INFO, resultset
