--- a/deployment-files/log4j-scheduler.properties
+++ b/deployment-files/log4j-scheduler.properties
@@ -6,6 +6,14 @@ log4j.appender.facilioAppender.File=${catalina.base}/logs/serverlog
 log4j.appender.facilioAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.facilioAppender.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{orgId} %X{userId} %m%n
 
+log4j.logger.com.facilio.bmsconsole.actions.ClientErrorAction=INFO, clientAppender, graylog2
+log4j.additivity.com.facilio.bmsconsole.actions.ClientErrorAction=false
+
+log4j.appender.clientAppender=com.facilio.logging.FacilioLogAppender
+log4j.appender.clientAppender.DatePattern='.'yyyy-MM-dd
+log4j.appender.clientAppender.File=${catalina.base}/logs/clientlog
+log4j.appender.clientAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.clientAppender.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{route} %X{stacktrace} %X{ceType} %X{ceInfo} %X{ceUa} %X{browser} %X{os} %X{orgId} %X{userId} %m%n
 
 log4j.logger.com.mysql.jdbc.ResultSetImpl=INFO, resultset
 log4j.additivity.com.mysql.jdbc.ResultSetImpl=false
