--- a/deployment-files/log4j-user.properties
+++ b/deployment-files/log4j-user.properties
@@ -4,7 +4,7 @@ log4j.appender.facilioAppender=com.facilio.logging.FacilioLogAppender
 log4j.appender.facilioAppender.DatePattern='.'yyyy-MM-dd
 log4j.appender.facilioAppender.File=${catalina.base}/logs/serverlog
 log4j.appender.facilioAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.facilioAppender.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{orgId} %X{userId} %m%n
+log4j.appender.facilioAppender.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{orgId} %X{userId} %X{req_uri} %m%n
 
 log4j.logger.com.facilio.bmsconsole.actions.ClientErrorAction=INFO, clientAppender, graylog2
 log4j.additivity.com.facilio.bmsconsole.actions.ClientErrorAction=false
@@ -22,7 +22,7 @@ log4j.appender.resultset=com.facilio.logging.FacilioLogAppender
 log4j.appender.resultset.DatePattern='.'yyyy-MM-dd
 log4j.appender.resultset.File=${catalina.base}/logs/resultset
 log4j.appender.resultset.layout=org.apache.log4j.PatternLayout
-log4j.appender.resultset.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{orgId} %X{userId} %m%n
+log4j.appender.resultset.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{orgId} %X{userId} %X{req_uri} %m%n
 
 
 log4j.logger.com.facilio.filters.AccessLogFilter=INFO, accesslog, graylog2
