--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,23 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>bms Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+	<repositories>
+		<repository>
+			<id>faciliodb-s3-release-repo</id>
+			<url>s3://repo.facilio/faciliodb/release</url>
+		</repository>
+		<repository>
+			<id>faciliodb-s3-snapshot-repo</id>
+			<url>s3://repo.facilio/faciliodb/snapshot</url>
+		</repository>
+	</repositories>
 	
 	<dependencies>
+		<dependency>
+			<groupId>com.facilio.db</groupId>
+			<artifactId>facilio-db</artifactId>
+			<version>1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -428,9 +443,9 @@
 	<build>
 		<extensions>
 			<extension>
-				<groupId>org.springframework.build</groupId>
-				<artifactId>aws-maven</artifactId>
-				<version>5.0.0.RELEASE</version>
+				<groupId>com.gkatzioura.maven.cloud</groupId>
+				<artifactId>s3-storage-wagon</artifactId>
+				<version>1.8</version>
 			</extension>
 		</extensions>
 		<finalName>ROOT</finalName>
