--- a/pom.xml
+++ b/pom.xml
@@ -414,17 +414,23 @@
             <version>1.54</version>
         </dependency>
        <!-- https://mvnrepository.com/artifact/com.googlecode.libphonenumber/libphonenumber -->
-<dependency>
-    <groupId>com.googlecode.libphonenumber</groupId>
-    <artifactId>libphonenumber</artifactId>
-    <version>3.5</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
-<dependency>
-    <groupId>org.antlr</groupId>
-    <artifactId>antlr4-runtime</artifactId>
-    <version>4.7.2</version>
-</dependency>
+		<dependency>
+			<groupId>com.googlecode.libphonenumber</groupId>
+			<artifactId>libphonenumber</artifactId>
+			<version>3.5</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.antlr/antlr4-runtime -->
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>antlr4-runtime</artifactId>
+			<version>4.7.2</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.transaction/jta -->
+		<dependency>
+			<groupId>javax.transaction</groupId>
+			<artifactId>jta</artifactId>
+			<version>1.1</version>
+		</dependency>
     
         <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
 		<dependency>
