duplicate Processing of message fixed.

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -75,3 +75,4 @@ mail.smtp.socketFactory.port=
 mail.username=
 ## smtp password
 mail.password=
+##message reprocess interval key -> message.reprocess.interval
