Moving getting dbclass method from AwsUtil to DBConf

--- a/src/main/resources/conf/awsprops.properties
+++ b/src/main/resources/conf/awsprops.properties
@@ -1,8 +1,8 @@
 ## db name [mysql / mssql]
-db.name=mysql
+## db.name=mysql
 
 ## implementation for db  [com.facilio.sql.mysql for mysql and com.facilio.sql.mssql for mssql]
-db.class=com.facilio.sql.mysql
+## db.class=com.facilio.sql.mysql
 
 ## support email used in mail sender
 rebrand.supportemail=support@facilio.com
