--- a/src/main/resources/conf/dbconfig.json
+++ b/src/main/resources/conf/dbconfig.json
@@ -1,6 +1,6 @@
 {
   "dbName": "mysql",
-  "dbPackage": "com.facilio.sql.mysql",
+  "dbPackage": "com.facilio.db.builder.mysql",
   "dbConfigClass": "com.facilio.bmsconsole.db.BmsDBConf",
   "operators" : [
     {
