changes stage db to stage-2

--- a/deployment-files/awsprops-stage.properties
+++ b/deployment-files/awsprops-stage.properties
@@ -37,7 +37,7 @@ redis.host=app-cache-1.jihtbf.0001.usw2.cache.amazonaws.com
 redis.port=6379
 redis.db=1
 
-db.identifiers=stage-db
+db.identifiers=stage-2-db
 payment.url=https://payfacilio-test.chargebee.com/hosted_pages/plans/
 
 weather.url=https://api.darksky.net/forecast/
