changed db identifier

--- a/deployment-files/awsprops-stage.properties
+++ b/deployment-files/awsprops-stage.properties
@@ -10,7 +10,7 @@ user.id=668907905219
 
 db.name=mysql
 db.class=com.facilio.sql.mysql
-db.identifiers=stage-2-db
+db.identifiers=stage-db
 
 rebrand.supportemail=support@facilio.com
 rebrand.brand=Facilio
