entries in v1 and defaultmodules

--- a/src/main/resources/conf/enums.yml
+++ b/src/main/resources/conf/enums.yml
@@ -3,3 +3,7 @@ version: 1.0
 enums:
   - name: CostType
     enumClassName: com.facilio.bmsconsole.context.ItemContext$CostType #If it's static inner class use $
+
+  - name: AlarmType
+    enumClassName: com.facilio.bmsconsole.context.BaseAlarmContext$Type
+    
