--- a/pom.xml
+++ b/pom.xml
@@ -421,14 +421,20 @@
 			<artifactId>jta</artifactId>
 			<version>1.1</version>
 		</dependency>
-    
-        <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
+        <dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.5.9</version>
+		</dependency>
+
+
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
 		<dependency>
 		    <groupId>org.apache.commons</groupId>
 		    <artifactId>commons-text</artifactId>
 		    <version>1.4</version>
 		</dependency>
-    </dependencies>
+	</dependencies>
 	<build>
 		<extensions>
 			<extension>
