--- a/deployment-files/agentIntegration-production.properties
+++ b/deployment-files/agentIntegration-production.properties
@@ -2,5 +2,6 @@ wattsenseBasePath =  https://api.wattsense.com/v1/
 wattsenseAuthApi = user
 wattsenseMqttPath = connector/mqtt/
 WattsenseCertificateStoreApi = certificates
-WattsenseAwsMqttEndpointBase : tcps://
-wattsenseInitiateMqttApi : /start
+WattsenseAwsMqttEndpointBase = tcps://    
+wattsenseInitiateMqttApi = /start
+wattsenseDeleteCertificateStoreApi = certificates/
