--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,21 @@
         <filter-name>HealthFilter</filter-name>
         <url-pattern>/api/health</url-pattern>
     </filter-mapping>
+    
+    <filter>
+        <filter-name>MultiRequestReadFilter</filter-name>
+        <filter-class>com.facilio.filters.MultiRequestReadFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>MultiRequestReadFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>AccessLogFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    
     <filter>
         <filter-name>AccessLogFilter</filter-name>
         <filter-class>com.facilio.filters.AccessLogFilter</filter-class>
