--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -30,14 +30,14 @@
         <url-pattern>/api/health</url-pattern>
     </filter-mapping>
     
-    <filter>
+    <!-- <filter>
         <filter-name>MultiRequestReadFilter</filter-name>
         <filter-class>com.facilio.filters.MultiRequestReadFilter</filter-class>
     </filter>
     <filter-mapping>
         <filter-name>MultiRequestReadFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>
+    </filter-mapping> -->
 
     <filter-mapping>
         <filter-name>AccessLogFilter</filter-name>
