adding log level to thread local

--- a/deployment-files/log4j-stage.properties
+++ b/deployment-files/log4j-stage.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, facilioAppender, graylog2
+log4j.rootLogger=ALL, facilioAppender, graylog2
 
 log4j.appender.facilioAppender=com.facilio.logging.FacilioLogAppender
 log4j.appender.facilioAppender.DatePattern='.'yyyy-MM-dd
