added new appender

--- a/deployment-files/log4j-stage.properties
+++ b/deployment-files/log4j-stage.properties
@@ -1,4 +1,4 @@
-log4j.rootLogger=INFO, facilioAppender, graylog2
+log4j.rootLogger=DEBUG, facilioAppender, graylog2
 
 log4j.appender.facilioAppender=com.facilio.logging.FacilioLogAppender
 log4j.appender.facilioAppender.DatePattern='.'yyyy-MM-dd
@@ -36,7 +36,7 @@ log4j.appender.accesslog.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %
 
 
 # Define the graylog2 destination https://marketplace.graylog.org/addons/a3c8bbdf-6b47-43fe-8298-f259db85fc59
-log4j.appender.graylog2=org.graylog2.log.GelfAppender
+log4j.appender.graylog2=com.facilio.logging.FacilioGelfAppender
 log4j.appender.graylog2.graylogHost=172.31.11.171
 log4j.appender.graylog2.facility=stage
 log4j.appender.graylog2.layout=org.apache.log4j.PatternLayout
