--- a/deployment-files/log4j-stage.properties
+++ b/deployment-files/log4j-stage.properties
@@ -6,7 +6,7 @@ log4j.appender.facilioAppender.File=${catalina.base}/logs/serverlog
 log4j.appender.facilioAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.facilioAppender.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{orgId} %X{userId} %X{req_uri} %m%n
 
-log4j.logger.com.facilio.bmsconsole.actions.ClientErrorAction=INFO, clientAppender, graylog2
+log4j.logger.com.facilio.bmsconsole.actions.ClientErrorAction=INFO, clientAppender, graylog3
 log4j.additivity.com.facilio.bmsconsole.actions.ClientErrorAction=false
 
 log4j.appender.clientAppender=com.facilio.logging.FacilioLogAppender
@@ -25,7 +25,7 @@ log4j.appender.resultset.layout=org.apache.log4j.PatternLayout
 log4j.appender.resultset.layout.ConversionPattern= %d{ISO8601} [%t] %c %-5p %x %X{orgId} %X{userId} %X{req_uri} %m%n
 
 
-log4j.logger.com.facilio.filters.AccessLogFilter=INFO, accesslog, graylog2
+log4j.logger.com.facilio.filters.AccessLogFilter=INFO, accesslog, graylog3
 log4j.additivity.com.facilio.filters.AccessLogFilter=false
 
 log4j.appender.accesslog=com.facilio.logging.FacilioLogAppender
@@ -43,3 +43,12 @@ log4j.appender.graylog2.layout=org.apache.log4j.PatternLayout
 log4j.appender.graylog2.includeLocation=false
 log4j.appender.graylog2.extractStacktrace=true
 log4j.appender.graylog2.addExtendedInformation=true
+
+# Define the graylog2 destination https://marketplace.graylog.org/addons/a3c8bbdf-6b47-43fe-8298-f259db85fc59
+log4j.appender.graylog3=org.graylog2.log.GelfAppender
+log4j.appender.graylog3.graylogHost=172.31.11.171
+log4j.appender.graylog3.facility=stage
+log4j.appender.graylog3.layout=org.apache.log4j.PatternLayout
+log4j.appender.graylog3.includeLocation=false
+log4j.appender.graylog3.extractStacktrace=true
+log4j.appender.graylog3.addExtendedInformation=true
